client: update compose, use correct jvm target, use/configure zgc